refactor(lms + identity/ SecurityConfig): disable CORS, pass its logic to API gateway